test/message/stack_overflow.chakracore.out
before
*test*message*stack_overflow.js:*
JSON.stringify(array);
^

Error: Out of stack space
